tests/ui/errors/snapshots/infer_method_not_found_with_typo_suggestion.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Member not found
   ╭─[test.lis:3:3]
 2 │ fn test(s: string) -> bool {
 3 │   s.cntains("world")
   ·   ────┬────
   ·       ╰── no member `cntains` on type `string`
 4 │ }
   ╰────
  help: Did you mean `contains()`? · code: [infer.member_not_found]
