tests/ui/errors/snapshots/infer_method_without_parens.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Cannot use native method as a value
   ╭─[test.lis:3:3]
 2 │ fn test(s: Slice<int>) -> int {
 3 │   s.length
   ·   ────┬───
   ·       ╰── native methods must be called directly
 4 │ }
   ╰────
  help: Call it directly: `receiver.length()`. To use it as a value, wrap in a closure: `|args| receiver.length(args)` · code: [infer.native_method_value]
