tests/ui/errors/snapshots/infer_missing_bound_on_param_for_ordered.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Missing bound on type parameter
   ╭─[test.lis:7:20]
 6 │ fn wrapper<T>(x: T) {
 7 │   requires_ordered(x)
   ·                    ┬
   ·                    ╰── does not satisfy `Ordered`
 8 │ }
   ╰────
  help: The parameter must be `cmp.Ordered` but the argument is unbounded. Add this bound to the enclosing function: `<T: cmp.Ordered>` · code: [infer.missing_bound_on_param]
