tests/ui/errors/snapshots/infer_missing_constraint_on_generic_return_type.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Missing constraint on generic return type
    ╭─[test.lis:16:28]
 15 │ 
 16 │ pub fn wrap<T>(item: T) -> Wrapper<T> {
    ·                            ─────┬────
    ·                                 ╰── expected `T` to be constrained
 17 │   Wrapper { inner: item }
    ╰────
  help: Constrain the generic: `wrap<T: Displayable>()`. The function returns a type that requires this constraint · code: [infer.missing_constraint_on_return_type]
